{
  "version": 4,
  "terraform_version": "0.12.21",
  "serial": 133,
  "lineage": "cdcf8e4b-db1f-3395-2238-6a88eb6247e0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demo",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501545346340:internet-gateway/igw-016f906a5054c09d6",
            "id": "igw-016f906a5054c09d6",
            "owner_id": "501545346340",
            "tags": {
              "Name": "k8s"
            },
            "vpc_id": "vpc-0c1e77109d349b5fa"
          },
          "dependencies": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "demo",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-04873aceecea0b2b9",
            "owner_id": "501545346340",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-016f906a5054c09d6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-0c1e77109d349b5fa"
          },
          "dependencies": [
            "aws_internet_gateway.demo",
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f9f8b8deacfa59d1",
            "route_table_id": "rtb-04873aceecea0b2b9",
            "subnet_id": "subnet-0e6c647b5769a95b8"
          },
          "dependencies": [
            "aws_internet_gateway.demo",
            "aws_route_table.demo",
            "aws_subnet.demo",
            "aws_vpc.demo"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-098af960e046fb951",
            "route_table_id": "rtb-04873aceecea0b2b9",
            "subnet_id": "subnet-0ad6c9ab79aa69f6c"
          },
          "dependencies": [
            "aws_internet_gateway.demo",
            "aws_route_table.demo",
            "aws_subnet.demo",
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo-cluster",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501545346340:security-group/sg-02ced6f43e6f0f0e6",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02ced6f43e6f0f0e6",
            "ingress": [
              {
                "cidr_blocks": [
                  "93.170.116.108/32"
                ],
                "description": "Allow workstation to communicate with the cluster API Server",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "k8s-cluster",
            "name_prefix": null,
            "owner_id": "501545346340",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tk8s"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1e77109d349b5fa"
          },
          "dependencies": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "demo-cluster-ingress-workstation-https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "93.170.116.108/32"
            ],
            "description": "Allow workstation to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-1298409622",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02ced6f43e6f0f0e6",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.demo-cluster",
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501545346340:subnet/subnet-0e6c647b5769a95b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0e6c647b5769a95b8",
            "map_public_ip_on_launch": true,
            "owner_id": "501545346340",
            "tags": {
              "Name": "k8s-node",
              "kubernetes.io/cluster/k8s-task": "shared"
            },
            "vpc_id": "vpc-0c1e77109d349b5fa"
          },
          "dependencies": [
            "aws_vpc.demo"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501545346340:subnet/subnet-0ad6c9ab79aa69f6c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0ad6c9ab79aa69f6c",
            "map_public_ip_on_launch": true,
            "owner_id": "501545346340",
            "tags": {
              "Name": "k8s-node",
              "kubernetes.io/cluster/k8s-task": "shared"
            },
            "vpc_id": "vpc-0c1e77109d349b5fa"
          },
          "dependencies": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501545346340:vpc/vpc-0c1e77109d349b5fa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-073997a31d5839ff4",
            "default_route_table_id": "rtb-012e7609e5148ad72",
            "default_security_group_id": "sg-0aa017eb44428c83b",
            "dhcp_options_id": "dopt-78df5602",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0c1e77109d349b5fa",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-012e7609e5148ad72",
            "owner_id": "501545346340",
            "tags": {
              "Name": "k8s-node",
              "kubernetes.io/cluster/k8s-task": "shared"
            }
          }
        }
      ]
    }
  ]
}